--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -2,7 +2,7 @@ Name: ocaml
 Cartridge-Short-Name: OCAML
 Display-Name: Ocaml 4.02.1
 Version: "4.02.1"
-Versions: ["4.02.1","4.02.0" "4.01.0" "4.00.1" "4.00.0" "3.12.1" "3.11.2"]
+Versions: ["4.02.1","4.02.0","4.01.0","4.00.1","4.00.0","3.12.1"]
 Website: https://code.fssrv.net/ocaml-openshift
 Cartridge-Version: 0.1.0
 Cartridge-Vendor: fssrv
@@ -25,3 +25,4 @@ Endpoints:
       - Frontend:      ""
         Backend:       ""
         Options:       { websocket: true }
+Source-Url: git://code.fssrv.net/ocaml-openshift
