tidy hook for app.

--- a/bin/control
+++ b/bin/control
@@ -35,6 +35,7 @@ function restart() {
 function tidy() {
 	client_message "Deleting ocaml log"
 	rm -rf $logfile
+	run_hook tidy
 }
 
 function build() {
